2007-07-24  Jan Nijtmans  <nijtmans@users.sf.net>

	* doc/Notifier.3       CONSTified 4 functions in the
	* doc/Thread.3         Notifier which all have a
	* generic/tcl.decls    Tcl_Time * in it which is supposed
	* generic/tcl.h        to be a constant, but this was not
	* generic/tclDecls.h   reflected in the API:
	* generic/tclNotify.c       Tcl_SetTimer
	* generic/tclThread.c       Tcl_WaitForEvent
	* macosx/tclMacOSXNotify.c  Tcl_ConditionWait
	* unix/tclUnixNotfy.c       Tcl_SetMaxBlockTime
	* unix/tclUnixThrd.c   Introduced a CONST86, so extensions which
	* win/tclWinNotify.c   have their own Notifier (are there any?)
	* win/tclWinThrd.c     can be modified to compile against both
	                       Tcl 8.5 and Tcl 8.6
	tclDecls.h is re-generated with "make genstubs"
	This change complies with TIP #24
	***POTENTIAL INCOMPATIBILITY***

2008-07-23  Alexandre Ferrieux  <ferrieux@users.sourceforge.net>

	* tests/lrange.test: Added relative speed test to check for lrange
	in-place optimization committed 2008-06-30.	
	* tests/binary.test: Added relative speed test to check for pure
	byte array CONCAT1 optimization committed 2008-06-30.

2008-07-23  Andreas Kupries  <andreask@activestate.com>

	* tests/info.test: Reordered the tests to have monotonously
	increasing numbers.

	* generic/tclBasic.c: Modified TclArgumentGet to reject pure lists
	* generic/tclCmdIL.c: immediately, without search. Reworked setup
	* generic/tclCompile.c: of eoFramePtr, doesn't need the line
	* tests/info.test: information, more sensible to have everything
	on line 1 when eval'ing a pure list. Updated the users of the line
	information to special case this based on the frame type (i.e.
	TCL_LOCATION_EVAL_LIST). Added a testcase demonstrating the new
	behaviour.

2008-07-23  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c (GetCommandSource): added comment with
	explanation and warning for waintainers.

2008-07-22  Andreas Kupries  <andreask@activestate.com>
