@@ -1,3 +1,10 @@
+2008-07-25  Daniel Steffen  <das@users.sourceforge.net>
+
+	* tests/info.test (info-37.0): Add !singleTestInterp constraint;
+	(info-22.8, info-23.0): switch to glob matching to avoid sensitivity
+	to tcltest.tcl line number changes, remove knownBug constraint, fix
+	expected result. [Bug 1605269]
+
 2007-07-24  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* doc/Notifier.3       CONSTified 4 functions in the
@@ -20,7 +27,7 @@
 2008-07-23  Alexandre Ferrieux  <ferrieux@users.sourceforge.net>
 
 	* tests/lrange.test: Added relative speed test to check for lrange
-	in-place optimization committed 2008-06-30.	
+	in-place optimization committed 2008-06-30.
 	* tests/binary.test: Added relative speed test to check for pure
 	byte array CONCAT1 optimization committed 2008-06-30.
 
